added game service

--- a/app/sudoko.html
+++ b/app/sudoko.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+    <button ng-click="solve()">Solve</button>
     <div class="row">
         <div class="col-md-1">&nbsp;</div>
         <div class="col-md-1">
